added extends EmbeddingStoreIT