@@ -1,27 +1,25 @@
 package dev.langchain4j.community.store.embedding.neo4j;
 
+import static dev.langchain4j.community.store.embedding.neo4j.Neo4jEmbeddingUtils.*;
+import static dev.langchain4j.internal.Utils.*;
+import static dev.langchain4j.internal.ValidationUtils.*;
+import static java.util.Collections.singletonList;
+
 import dev.langchain4j.data.embedding.Embedding;
 import dev.langchain4j.data.segment.TextSegment;
 import dev.langchain4j.store.embedding.EmbeddingMatch;
 import dev.langchain4j.store.embedding.EmbeddingSearchRequest;
 import dev.langchain4j.store.embedding.EmbeddingSearchResult;
 import dev.langchain4j.store.embedding.EmbeddingStore;
+import java.util.*;
+import java.util.stream.Stream;
+import org.neo4j.driver.Driver;
 import org.neo4j.driver.Session;
+import org.neo4j.driver.SessionConfig;
 import org.neo4j.driver.Value;
 import org.neo4j.driver.Values;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
-import java.util.*;
-import java.util.stream.Stream;
-
-import static dev.langchain4j.community.store.embedding.neo4j.Neo4jEmbeddingUtils.*;
-import static dev.langchain4j.internal.Utils.*;
-import static dev.langchain4j.internal.ValidationUtils.*;
-import static java.util.Collections.singletonList;
-
-import org.neo4j.driver.Driver;
-import org.neo4j.driver.SessionConfig;
 
 /**
  * Represents a <a href="https://neo4j.com/">Neo4j</a> Vector index as an embedding store.
@@ -36,9 +34,20 @@ import org.neo4j.driver.SessionConfig;
  * }
  * }</pre><p>
  */
-public class Neo4jEmbeddingStore implements EmbeddingStore<TextSegment> {
+public class Neo4jEmbeddingStore implements EmbeddingStore<TextSegment>, AutoCloseable {
 
     private static final Logger log = LoggerFactory.getLogger(Neo4jEmbeddingStore.class);
+    public static final String INDEX_CREATION = """
+            UNWIND $rows AS row
+            MERGE (u:%1$s {%2$s: row.%2$s})
+            SET u += row.%3$s
+            WITH row, u
+            CALL db.create.setNodeVectorProperty(u, $embeddingProperty, row.%4$s)
+            RETURN count(*)""";
+    public static final String INDEX_ALREADY_EXISTS_ERROR = """
+            It's not possible to create an index for the label `%s` and the property `%s`,
+            as there is another index with name `%s` with different labels: `%s` and properties `%s`.
+            Please provide another indexName to create the vector index, or delete the existing one""";
 
     /* Neo4j Java Driver settings */
     private final Driver driver;
@@ -71,8 +80,8 @@ public class Neo4jEmbeddingStore implements EmbeddingStore<TextSegment> {
      * @param textProperty the optional textProperty property name (default: "text")
      * @param indexName the optional index name (default: "vector")
      * @param databaseName the optional database name (default: "neo4j")
-     * @param awaitIndexTimeout the optional awaiting timeout for all indexes to come online, in seconds (default: 60s)                    
-     * @param retrievalQuery the optional retrieval query 
+     * @param awaitIndexTimeout the optional awaiting timeout for all indexes to come online, in seconds (default: 60s)
+     * @param retrievalQuery the optional retrieval query
      *                        (default: "RETURN properties(node) AS metadata, node.`idProperty` AS `idProperty`, node.`textProperty` AS `textProperty`, node.`embeddingProperty` AS `embeddingProperty`, score")
      */
     public Neo4jEmbeddingStore(
@@ -119,21 +128,28 @@ public class Neo4jEmbeddingStore implements EmbeddingStore<TextSegment> {
         */
         String defaultRetrievalQuery = String.format(
                 "RETURN properties(node) AS metadata, node.%1$s AS %1$s, node.%2$s AS %2$s, node.%3$s AS %3$s, score",
-                this.sanitizedIdProperty, sanitizedText, sanitizedEmbeddingProperty
-        );
+                this.sanitizedIdProperty, sanitizedText, sanitizedEmbeddingProperty);
         this.retrievalQuery = getOrDefault(retrievalQuery, defaultRetrievalQuery);
 
         this.notMetaKeys = new HashSet<>(Arrays.asList(this.idProperty, this.embeddingProperty, this.textProperty));
 
         /* auto-schema creation */
         createSchema();
-    }    
-    
+    }
+
     public static Builder builder() {
         return new Builder();
     }
+    
+    /**
+     * Close the Neo4j Driver connection
+     */
+    @Override
+    public void close() {
+        driver.close();
+    }
 
-    /* 
+    /*
     Getter methods
     */
     public Set<String> getNotMetaKeys() {
@@ -194,17 +210,23 @@ public class Neo4jEmbeddingStore implements EmbeddingStore<TextSegment> {
         var embeddingValue = Values.value(request.queryEmbedding().vector());
 
         try (var session = session()) {
-            Map<String, Object> params = Map.of("indexName", indexName,
-                    "embeddingValue", embeddingValue,
-                    "minScore", request.minScore(),
-                    "maxResults", request.maxResults());
+            Map<String, Object> params = Map.of(
+                    "indexName",
+                    indexName,
+                    "embeddingValue",
+                    embeddingValue,
+                    "minScore",
+                    request.minScore(),
+                    "maxResults",
+                    request.maxResults());
 
-            List<EmbeddingMatch<TextSegment>> matches = session
-                    .run("""
+            List<EmbeddingMatch<TextSegment>> matches = session.run(
+                            """
                         CALL db.index.vector.queryNodes($indexName, $maxResults, $embeddingValue)
                         YIELD node, score
                         WHERE score >= $minScore
-                        """ + retrievalQuery,
+                        """
+                                    + retrievalQuery,
                             params)
                     .list(item -> toEmbeddingMatch(this, item));
 
@@ -227,7 +249,9 @@ public class Neo4jEmbeddingStore implements EmbeddingStore<TextSegment> {
             return;
         }
         ensureTrue(ids.size() == embeddings.size(), "ids size is not equal to embeddings size");
-        ensureTrue(embedded == null || embeddings.size() == embedded.size(), "embeddings size is not equal to embedded size");
+        ensureTrue(
+                embedded == null || embeddings.size() == embedded.size(),
+                "embeddings size is not equal to embedded size");
 
         bulk(ids, embeddings, embedded);
     }
@@ -237,22 +261,11 @@ public class Neo4jEmbeddingStore implements EmbeddingStore<TextSegment> {
 
         try (var session = session()) {
             rowsBatched.forEach(rows -> {
-                String statement = """
-                                UNWIND $rows AS row
-                                MERGE (u:%1$s {%2$s: row.%2$s})
-                                SET u += row.%3$s
-                                WITH row, u
-                                CALL db.create.setNodeVectorProperty(u, $embeddingProperty, row.%4$s)
-                                RETURN count(*)""".formatted(
-                        this.sanitizedLabel,
-                        this.sanitizedIdProperty,
-                        PROPS,
-                        EMBEDDINGS_ROW_KEY);
+                String statement =
+                        String.format(INDEX_CREATION,
+                                this.sanitizedLabel, this.sanitizedIdProperty, PROPS, EMBEDDINGS_ROW_KEY);
 
-                Map<String, Object> params = Map.of(
-                        "rows", rows,
-                        "embeddingProperty", this.embeddingProperty
-                );
+                Map<String, Object> params = Map.of("rows", rows, "embeddingProperty", this.embeddingProperty);
 
                 session.executeWrite(tx -> tx.run(statement, params).consume());
             });
@@ -270,9 +283,7 @@ public class Neo4jEmbeddingStore implements EmbeddingStore<TextSegment> {
         try (var session = session()) {
             String query = String.format(
                     "CREATE CONSTRAINT IF NOT EXISTS FOR (n:%s) REQUIRE n.%s IS UNIQUE",
-                    this.sanitizedLabel,
-                    this.sanitizedIdProperty
-            );
+                    this.sanitizedLabel, this.sanitizedIdProperty);
             session.run(query);
         }
     }
@@ -285,23 +296,15 @@ public class Neo4jEmbeddingStore implements EmbeddingStore<TextSegment> {
                 return false;
             }
             var record = resIndex.single();
-            List<String> idxLabels = record
-                    .get("labelsOrTypes")
-                    .asList(Value::asString);
+            List<String> idxLabels = record.get("labelsOrTypes").asList(Value::asString);
             List<Object> idxProps = record.get("properties").asList();
 
             boolean isIndexDifferent = !idxLabels.equals(singletonList(this.label))
                     || !idxProps.equals(singletonList(this.embeddingProperty));
             if (isIndexDifferent) {
-                String errMessage = String.format("""
-                                It's not possible to create an index for the label `%s` and the property `%s`,
-                                as there is another index with name `%s` with different labels: `%s` and properties `%s`.
-                                Please provide another indexName to create the vector index, or delete the existing one""",
-                        this.label,
-                        this.embeddingProperty,
-                        this.indexName,
-                        idxLabels,
-                        idxProps);
+                String errMessage = String.format(
+                        INDEX_ALREADY_EXISTS_ERROR,
+                        this.label, this.embeddingProperty, this.indexName, idxLabels, idxProps);
                 throw new RuntimeException(errMessage);
             }
             return true;
@@ -309,19 +312,24 @@ public class Neo4jEmbeddingStore implements EmbeddingStore<TextSegment> {
     }
 
     private void createIndex() {
-        Map<String, Object> params = Map.of("indexName", this.indexName,
-                "label", this.label,
-                "embeddingProperty", this.embeddingProperty,
-                "dimension", this.dimension);
+        Map<String, Object> params = Map.of(
+                "indexName",
+                this.indexName,
+                "label",
+                this.label,
+                "embeddingProperty",
+                this.embeddingProperty,
+                "dimension",
+                this.dimension);
 
         // create vector index
         try (var session = session()) {
-            session.run("CALL db.index.vector.createNodeIndex($indexName, $label, $embeddingProperty, $dimension, 'cosine')",
+            session.run(
+                    "CALL db.index.vector.createNodeIndex($indexName, $label, $embeddingProperty, $dimension, 'cosine')",
                     params);
 
-            session.run("CALL db.awaitIndexes($timeout)",
-                    Map.of("timeout", awaitIndexTimeout)
-            ).consume();
+            session.run("CALL db.awaitIndexes($timeout)", Map.of("timeout", awaitIndexTimeout))
+                    .consume();
         }
     }
 
